--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - name: My_Hook
         run: |
-          curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_4Vt6wbGAO76vIUMuTDozd9tP5Vo8/MzKm7kVEO0
+          curl -X POST ${{secrets.MY_SECRET_KEY}}
