--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "cheerio": "^1.0.0",
     "dompurify": "^3.2.5",
     "html-react-parser": "^5.2.3",
     "next": "15.2.4",
     "next-redux-wrapper": "^8.1.0",
+    "puppeteer": "^24.7.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -34,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-slider": "^1.3.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
