--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^1.8.4",
+    "@sparticuz/chrome-aws-lambda": "^17.1.3",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "cheerio": "^1.0.0",
+    "chrome-aws-lambda": "^10.1.0",
     "dompurify": "^3.2.5",
     "html-react-parser": "^5.2.3",
+    "ignore-loader": "^0.1.2",
     "next": "15.2.4",
     "next-redux-wrapper": "^8.1.0",
-    "puppeteer": "^24.7.1",
+    "playwright": "^1.52.0",
+    "puppeteer-core": "^17.1.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
